--- a/GestioneOrario/app/src/main/res/layout/nav_header_main.xml
+++ b/GestioneOrario/app/src/main/res/layout/nav_header_main.xml
@@ -15,20 +15,34 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:paddingTop="5dp"
         android:src="@android:drawable/sym_def_app_icon" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="238dp"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Android Studio"
+        android:paddingTop="5dp"
+        android:text="Orario Marconi Pontedera Pisa"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="android.studio@android.com" />
+        android:textSize="12dp"
+        android:text="Sviluppato nell'ambito del" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12dp"
+        android:text="progetto alternzanza scuola lavoro" />
+    <TextView
+        android:id="@+id/textViewNomi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12dp"
+        android:text="da Jacopo, Filippo e Giorgio" />
 
 </LinearLayout>
