--- a/GestioneOrario/app/src/main/res/layout/content_main.xml
+++ b/GestioneOrario/app/src/main/res/layout/content_main.xml
@@ -104,7 +104,8 @@
         android:layout_below="@+id/spinnerGiorno"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="52dp"
-        android:singleLine="false" />
+        android:singleLine="false"
+        android:onClick="goToDATAUI" />
 
 
 </RelativeLayout>
