--- a/GestioneOrario/app/src/main/res/layout/activity_data_ui.xml
+++ b/GestioneOrario/app/src/main/res/layout/activity_data_ui.xml
@@ -27,6 +27,13 @@
         android:layout_alignTop="@+id/textView7"
         android:layout_alignParentEnd="true" />
 
+    <RadioGroup
+        android:id="@+id/radioPiano"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@id/giorno_ricerca"
+        android:layout_below="@+id/giorno_ricerca" >
+
     <RadioButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -50,15 +57,15 @@
         android:id="@+id/radioButtonPT"
         android:layout_below="@+id/radioButtonP2"
         android:layout_alignStart="@+id/radioButtonP2" />
-
+    </RadioGroup>
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="310dp"
         android:layout_height="250dp"
         android:id="@+id/imageView2"
         android:src="@drawable/ic_info_outline_black_24dp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/radioButtonP1"
-        android:layout_toStartOf="@+id/radioButtonP1" />
+        android:layout_below="@+id/tiporicerca"/>
+       <!-- android:layout_toStartOf="@+id/radioButtonP1" -->
 
     <View
         android:id="@+id/SplitLine_hor1"
@@ -67,58 +74,66 @@
         android:layout_height= "2dp"
         android:background="@color/colorPrimary" />
 
-    <Button
+    <ToggleButton
         android:layout_width="55dp"
         android:layout_height="wrap_content"
-        android:text="1"
+        android:textOn="1"
+        android:textOff="1"
         android:id="@+id/buttonO1"
         android:layout_below="@+id/SplitLine_hor1"
         android:layout_alignParentStart="true" />
 
-    <Button
+    <ToggleButton
         android:layout_width="55dp"
         android:layout_height="wrap_content"
-        android:text="2"
+        android:textOn="2"
+        android:textOff="2"
         android:id="@+id/buttonO2"
         android:layout_below="@+id/SplitLine_hor1"
         android:layout_toEndOf="@+id/buttonO1"
         android:singleLine="false" />
 
-    <Button
+    <ToggleButton
         android:layout_width="55dp"
         android:layout_height="wrap_content"
-        android:text="3"
+        android:textOn="3"
+        android:textOff="3"
         android:id="@+id/buttonO3"
         android:singleLine="false"
         android:layout_below="@+id/SplitLine_hor1"
         android:layout_toEndOf="@+id/buttonO2" />
 
-    <Button
+    <ToggleButton
         android:layout_width="55dp"
         android:layout_height="wrap_content"
-        android:text="4"
+        android:textOn="4"
+        android:textOff="4"
         android:id="@+id/buttonO4"
         android:singleLine="false"
         android:layout_below="@+id/SplitLine_hor1"
         android:layout_toEndOf="@+id/buttonO3" />
 
-    <Button
+    <ToggleButton
         android:layout_width="55dp"
         android:layout_height="wrap_content"
-        android:text="5"
+        android:textOn="5"
+        android:textOff="5"
         android:id="@+id/buttonO5"
         android:singleLine="false"
         android:layout_below="@+id/SplitLine_hor1"
         android:layout_toEndOf="@+id/buttonO4" />
 
-    <Button
+    <ToggleButton
         android:layout_width="55dp"
         android:layout_height="wrap_content"
-        android:text="6"
+        android:textOn="6"
+        android:textOff="6"
         android:id="@+id/buttonO6"
         android:singleLine="false"
         android:layout_below="@+id/SplitLine_hor1"
         android:layout_toEndOf="@+id/buttonO5" />
+
+
 
     <TextView
         android:layout_width="wrap_content"
