--- a/GestioneOrario/app/src/main/res/layout/content_main.xml
+++ b/GestioneOrario/app/src/main/res/layout/content_main.xml
@@ -22,7 +22,7 @@
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner"
+        android:id="@+id/spinnerMateria"
         android:layout_below="@+id/textView2"
 
         android:layout_alignParentStart="true"
@@ -34,7 +34,7 @@
         android:text="Seleziona Prof"
         android:id="@+id/textView3"
         android:textSize="@dimen/abc_text_size_body_1_material"
-        android:layout_below="@+id/spinner"
+        android:layout_below="@+id/spinnerMateria"
         android:layout_alignParentStart="true" />
 
     <Spinner
@@ -58,7 +58,7 @@
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner2"
+        android:id="@+id/spinnerAula"
         android:layout_below="@+id/textView4"
         android:layout_alignParentStart="true" />
 
@@ -68,13 +68,13 @@
         android:text="Seleziona Classe"
         android:id="@+id/textView5"
         android:textSize="@dimen/abc_text_size_body_1_material"
-        android:layout_below="@+id/spinner2"
+        android:layout_below="@+id/spinnerAula"
         android:layout_alignParentStart="true" />
 
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner3"
+        android:id="@+id/spinnerClasse"
         android:layout_below="@+id/textView5"
         android:layout_alignParentStart="true" />
 
@@ -84,7 +84,7 @@
         android:text="Seleziona Giorno"
         android:id="@+id/textView6"
         android:textSize="@dimen/abc_text_size_body_1_material"
-        android:layout_below="@+id/spinner3"
+        android:layout_below="@+id/spinnerClasse"
         android:layout_alignParentStart="true" />
 
     <Spinner
