--- a/GestioneOrario/app/src/main/res/layout/activity_data_ui.xml
+++ b/GestioneOrario/app/src/main/res/layout/activity_data_ui.xml
@@ -24,7 +24,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/giorno_ricerca"
-        android:layout_alignTop="@+id/textView7"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true" />
 
     <RadioGroup
