--- a/GestioneOrario/app/src/main/res/layout/activity_data_ui.xml
+++ b/GestioneOrario/app/src/main/res/layout/activity_data_ui.xml
@@ -134,6 +134,21 @@
         android:layout_toEndOf="@+id/buttonO5" />
 
 
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        card_view:cardCornerRadius="4dp"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/textViewOrario">
+
+        <TextView
+            android:id="@+id/info_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </android.support.v7.widget.CardView>
 
     <TextView
         android:layout_width="wrap_content"
@@ -141,9 +156,9 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
         android:id="@+id/textViewOrario"
-        android:layout_below="@+id/buttonO1"
-        android:layout_marginTop="62dp"
-        android:layout_toStartOf="@+id/buttonO5" />
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/buttonO3"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
