--- a/GestioneOrario/app/src/main/res/layout/nav_header_main.xml
+++ b/GestioneOrario/app/src/main/res/layout/nav_header_main.xml
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12dp"
-        android:text="progetto alternzanza scuola lavoro" />
+        android:text="progetto alternanza scuola lavoro" />
     <TextView
         android:id="@+id/textViewNomi"
         android:layout_width="wrap_content"
