--- a/GestioneOrario/app/src/main/res/layout/activity_data_ui.xml
+++ b/GestioneOrario/app/src/main/res/layout/activity_data_ui.xml
@@ -62,7 +62,9 @@
         android:layout_width="310dp"
         android:layout_height="250dp"
         android:id="@+id/imageView2"
-        android:src="@drawable/ic_info_outline_black_24dp"
+        android:src="@drawable/disegno"
+        android:adjustViewBounds="true"
+        android:scaleType="matrix"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tiporicerca"/>
        <!-- android:layout_toStartOf="@+id/radioButtonP1" -->
@@ -138,27 +140,23 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_gravity="center"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="350dp"
+        android:layout_height="35dp"
+        android:paddingTop="16dp"
+        android:paddingLeft="16dp"
         card_view:cardCornerRadius="4dp"
         android:layout_alignParentBottom="true"
-        android:layout_below="@+id/textViewOrario">
-
+        android:layout_below="@+id/buttonO6">
         <TextView
             android:id="@+id/info_text"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true" />
+
     </android.support.v7.widget.CardView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/textViewOrario"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/buttonO3"
-        android:layout_centerHorizontal="true" />
+
 
 
 </RelativeLayout>
