--- a/GestioneOrario/app/src/main/res/layout/splash.xml
+++ b/GestioneOrario/app/src/main/res/layout/splash.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_settings_black_24dp">
+    android:background="@drawable/marconi2">
 
 
 </LinearLayout>
