--- a/GestioneOrario/app/src/main/res/layout/activity_data_ui.xml
+++ b/GestioneOrario/app/src/main/res/layout/activity_data_ui.xml
@@ -58,7 +58,9 @@
         android:layout_below="@+id/radioButtonP2"
         android:layout_alignStart="@+id/radioButtonP2" />
     </RadioGroup>
-    <ImageView
+
+
+            <marconi.isti.gestioneorario.TouchImageView
         android:layout_width="310dp"
         android:layout_height="250dp"
         android:id="@+id/imageView2"
@@ -67,7 +69,7 @@
         android:scaleType="matrix"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tiporicerca"/>
-       <!-- android:layout_toStartOf="@+id/radioButtonP1" -->
+
 
     <View
         android:id="@+id/SplitLine_hor1"
