--- a/GestioneOrario/app/src/main/res/layout/activity_data_ui.xml
+++ b/GestioneOrario/app/src/main/res/layout/activity_data_ui.xml
@@ -138,25 +138,12 @@
         android:layout_toEndOf="@+id/buttonO5" />
 
 
-   <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
-        android:layout_gravity="center"
-        android:layout_width="350dp"
-        android:layout_height="35dp"
-        android:paddingTop="16dp"
-        android:paddingLeft="16dp"
-        card_view:cardCornerRadius="4dp"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/buttonO6">
-        <TextView
-            android:id="@+id/info_text"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true" />
-
-    </android.support.v7.widget.CardView>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/cardList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/buttonO6"
+        />
 
 
 
