--- a/GestioneOrario/app/src/main/res/layout/content_main.xml
+++ b/GestioneOrario/app/src/main/res/layout/content_main.xml
@@ -34,8 +34,9 @@
         android:text="Seleziona Prof"
         android:id="@+id/textView3"
         android:textSize="@dimen/abc_text_size_body_1_material"
-        android:layout_below="@+id/spinnerMateria"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignEnd="@+id/spinnerMateria" />
 
     <Spinner
         android:layout_width="wrap_content"
@@ -43,7 +44,8 @@
         android:id="@+id/spinnerProf"
         android:layout_below="@+id/textView3"
 
-        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignEnd="@+id/spinnerMateria"
         android:spinnerMode="dropdown" />
 
     <TextView
@@ -96,16 +98,7 @@
         android:entries="@array/spinnerItems"
         android:spinnerMode="dropdown" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Avvia Ricerca"
-        android:id="@+id/button"
-        android:layout_below="@+id/spinnerGiorno"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="52dp"
-        android:singleLine="false"
-        android:onClick="goToDATAUI" />
+
 
 
 </RelativeLayout>
