--- a/GestioneOrario/app/src/main/res/layout/cardview_classe.xml
+++ b/GestioneOrario/app/src/main/res/layout/cardview_classe.xml
@@ -19,13 +19,18 @@
             android:layout_height="match_parent"
             android:textSize="20sp"
             android:id="@+id/classecard"
-
+            android:layout_gravity="center|right"
+            android:gravity="center|right"
             android:background="@android:color/holo_red_light"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginRight="16dp"
             android:textAlignment="center"
-            android:text="3AMM" />
+            android:textStyle="bold"
+            android:text="3AMM"
+            android:elegantTextHeight="false"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,16 +40,17 @@
             android:layout_alignParentTop="true"
             android:textSize="20sp"
             android:text="MERLINI FRANCESCA"
-            />
+            android:layout_marginLeft="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/materiacard"
+            android:textStyle="bold"
             android:layout_below="@+id/profcard"
             android:text="ELETTROT. ED ELE."
             android:layout_toRightOf="@+id/classecard"
-            />
+            android:layout_marginLeft="15dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -53,7 +59,7 @@
             android:layout_toRightOf="@+id/classecard"
             android:layout_below="@+id/materiacard"
             android:text="00:00"
-            />
+            android:layout_marginLeft="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -68,11 +74,14 @@
             android:layout_height="match_parent"
             android:id="@+id/aula_card"
             android:layout_alignParentTop="true"
+            android:textStyle="bold"
             android:layout_alignParentEnd="true"
             android:background="@android:color/holo_red_light"
-
+            android:layout_gravity="center|right"
+            android:gravity="center|right"
             android:text="LAB1"
-            />
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
