--- a/GestioneOrario/app/src/main/res/layout/content_main.xml
+++ b/GestioneOrario/app/src/main/res/layout/content_main.xml
@@ -36,7 +36,7 @@
         android:textSize="@dimen/abc_text_size_body_1_material"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignEnd="@+id/spinnerMateria" />
+        android:layout_alignEnd="@id/spinnerMateria" />
 
     <Spinner
         android:layout_width="wrap_content"
@@ -45,7 +45,7 @@
         android:layout_below="@+id/textView3"
 
         android:layout_alignParentEnd="true"
-        android:layout_alignEnd="@+id/spinnerMateria"
+        android:layout_alignEnd="@id/spinnerMateria"
         android:spinnerMode="dropdown" />
 
     <TextView
@@ -54,7 +54,7 @@
         android:text="Seleziona Aula"
         android:id="@+id/textView4"
         android:textSize="@dimen/abc_text_size_body_1_material"
-        android:layout_below="@+id/spinnerProf"
+        android:layout_below="@id/spinnerProf"
         android:layout_alignParentStart="true" />
 
     <Spinner
@@ -70,7 +70,7 @@
         android:text="Seleziona Classe"
         android:id="@+id/textView5"
         android:textSize="@dimen/abc_text_size_body_1_material"
-        android:layout_below="@+id/spinnerAula"
+        android:layout_below="@id/spinnerAula"
         android:layout_alignParentStart="true" />
 
     <Spinner
@@ -86,7 +86,7 @@
         android:text="Seleziona Giorno"
         android:id="@+id/textView6"
         android:textSize="@dimen/abc_text_size_body_1_material"
-        android:layout_below="@+id/spinnerClasse"
+        android:layout_below="@id/spinnerClasse"
         android:layout_alignParentStart="true" />
 
     <Spinner
