--- a/GestioneOrario/app/src/main/res/layout/cardview_classe.xml
+++ b/GestioneOrario/app/src/main/res/layout/cardview_classe.xml
@@ -66,8 +66,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/ora_fine"
             android:text="00:00"
-            android:layout_below="@id/materiacard"
-            android:layout_alignEnd="@id/profcard" />
+            android:layout_below="@+id/materiacard"
+            android:layout_toStartOf="@+id/aula_card" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -81,7 +81,8 @@
             android:gravity="center|right"
             android:text="LAB1"
             android:paddingLeft="10dp"
-            android:paddingRight="10dp" />
+            android:paddingRight="10dp"
+            android:layout_marginLeft="5dp" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
