--- a/GestioneOrario/app/src/main/res/layout/cardview_classe.xml
+++ b/GestioneOrario/app/src/main/res/layout/cardview_classe.xml
@@ -24,7 +24,7 @@
             android:background="@android:color/holo_red_light"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginRight="16dp"
+            android:layout_marginRight="1dp"
             android:textAlignment="center"
             android:textStyle="bold"
             android:text="3AMM"
@@ -38,7 +38,6 @@
             android:id="@+id/profcard"
             android:textSize="20sp"
             android:text="MERLINI FRANCESCA"
-            android:layout_marginLeft="10dp"
             android:gravity="center"
             android:layout_alignTop="@+id/aula_card"
             android:layout_alignStart="@+id/ora_inizio"
@@ -52,7 +51,8 @@
             android:layout_below="@+id/profcard"
             android:text="ELETTROT. ED ELE."
             android:layout_toRightOf="@id/classecard"
-            android:layout_marginLeft="15dp" />
+            android:layout_alignStart="@+id/ora_inizio"
+            android:gravity="center" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -69,7 +69,8 @@
             android:id="@+id/ora_fine"
             android:text="00:00"
             android:layout_below="@+id/materiacard"
-            android:layout_toStartOf="@+id/aula_card" />
+            android:layout_toStartOf="@+id/aula_card"
+            android:layout_marginRight="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -81,10 +82,9 @@
             android:background="@android:color/holo_red_light"
             android:layout_gravity="center|right"
             android:gravity="center|right"
-            android:text="LAB1"
+            android:text="LAB1\nCIAO"
             android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:layout_marginLeft="5dp" />
+            android:paddingRight="10dp" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
