--- a/GestioneOrario/app/src/main/res/layout/spinner_dropdown_item.xml
+++ b/GestioneOrario/app/src/main/res/layout/spinner_dropdown_item.xml
@@ -7,5 +7,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="8dp"
+    android:paddingButton="8dp"
     android:paddingLeft="8dp"
     android:ellipsize="marquee"/>
