--- a/GestioneOrario/app/src/main/res/layout/spinner_dropdown_item.xml
+++ b/GestioneOrario/app/src/main/res/layout/spinner_dropdown_item.xml
@@ -6,7 +6,7 @@
     android:textColor="@android:color/black"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="8dp"
     android:paddingTop="8dp"
-    android:paddingButton="8dp"
     android:paddingLeft="8dp"
     android:ellipsize="marquee"/>
