--- a/GestioneOrario/app/src/main/res/layout/nav_header_main.xml
+++ b/GestioneOrario/app/src/main/res/layout/nav_header_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/nav_header_height"
+    android:layout_height="120dp"
     android:background="@drawable/side_nav_bar"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -16,33 +16,45 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="5dp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/ic_launcher"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="238dp"
         android:layout_height="wrap_content"
         android:paddingTop="5dp"
+
         android:text="Orario Marconi Pontedera Pisa"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:id="@+id/textView7"
+        android:layout_above="@+id/textView"
+        android:layout_toEndOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12dp"
-        android:text="Sviluppato nell'ambito del" />
+        android:text="Sviluppato nell'ambito del"
+        android:layout_above="@+id/textView1"
+        android:layout_alignStart="@+id/textView1" />
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12dp"
-        android:text="progetto alternanza scuola lavoro" />
+        android:text="progetto alternanza scuola lavoro"
+        android:layout_alignBottom="@+id/imageView"
+        android:layout_alignStart="@+id/textView7" />
     <TextView
         android:id="@+id/textViewNomi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12dp"
-        android:text="da Jacopo, Filippo e Giorgio" />
+        android:text="da Jacopo, Filippo e Giorgio"
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@+id/textView1" />
 
-</LinearLayout>
+</RelativeLayout>
