new splash screen

--- a/GestioneOrario/app/src/main/res/layout/content_main.xml
+++ b/GestioneOrario/app/src/main/res/layout/content_main.xml
@@ -31,22 +31,28 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Seleziona Prof"
+        android:text="Seleziona Professore"
         android:id="@+id/textView3"
         android:textSize="@dimen/abc_text_size_body_1_material"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignEnd="@id/spinnerMateria" />
+        android:layout_below="@+id/spinnerMateria"
+        android:layout_alignParentStart="true" />
 
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/spinnerProf"
-        android:layout_below="@+id/textView3"
 
-        android:layout_alignParentEnd="true"
-        android:layout_alignEnd="@id/spinnerMateria"
-        android:spinnerMode="dropdown" />
+        android:spinnerMode="dropdown"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentStart="true" />
+
+    <View
+        android:id="@+id/SplitLine_hor1"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/spinnerProf"
+        android:layout_height= "2dp"
+        android:background="@color/colorPrimary" />
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -54,7 +60,7 @@
         android:text="Seleziona Aula"
         android:id="@+id/textView4"
         android:textSize="@dimen/abc_text_size_body_1_material"
-        android:layout_below="@id/spinnerProf"
+        android:layout_below="@id/SplitLine_hor1"
         android:layout_alignParentStart="true" />
 
     <Spinner
@@ -64,13 +70,20 @@
         android:layout_below="@+id/textView4"
         android:layout_alignParentStart="true" />
 
+    <View
+        android:id="@+id/SplitLine_hor2"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/spinnerAula"
+        android:layout_height= "2dp"
+        android:background="@color/colorPrimary" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Seleziona Classe"
         android:id="@+id/textView5"
         android:textSize="@dimen/abc_text_size_body_1_material"
-        android:layout_below="@id/spinnerAula"
+        android:layout_below="@id/SplitLine_hor2"
         android:layout_alignParentStart="true" />
 
     <Spinner
@@ -80,13 +93,21 @@
         android:layout_below="@+id/textView5"
         android:layout_alignParentStart="true" />
 
+
+    <View
+        android:id="@+id/SplitLine_hor3"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/spinnerClasse"
+        android:layout_height= "2dp"
+        android:background="@color/colorPrimary" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Seleziona Giorno"
         android:id="@+id/textView6"
         android:textSize="@dimen/abc_text_size_body_1_material"
-        android:layout_below="@id/spinnerClasse"
+        android:layout_below="@id/SplitLine_hor3"
         android:layout_alignParentStart="true" />
 
     <Spinner
