--- a/GestioneOrario/app/src/main/res/layout/nav_header_main.xml
+++ b/GestioneOrario/app/src/main/res/layout/nav_header_main.xml
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:textSize="12dp"
         android:text="da Jacopo, Filippo e Giorgio"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/textView1" />
+        android:layout_below="@+id/textView1"
+        android:layout_toEndOf="@+id/imageView" />
 
 </RelativeLayout>
