--- a/GestioneOrario/app/src/main/res/menu/activity_main_drawer.xml
+++ b/GestioneOrario/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,7 +3,7 @@
 
     <group android:id="@+id/group1" android:checkableBehavior="single" >
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/orariocompleto"
             android:icon="@drawable/clock"
             android:title="Orario Completo" />
         <item
