--- a/GestioneOrario/app/src/main/res/layout/activity_data_ui.xml
+++ b/GestioneOrario/app/src/main/res/layout/activity_data_ui.xml
@@ -65,7 +65,7 @@
         android:layout_width="310dp"
         android:layout_height="310dp"
         android:id="@+id/imageView2"
-        android:src="@drawable/primopianomarconi"
+        android:src="@drawable/g1"
         android:adjustViewBounds="true"
         android:scaleType="matrix"
         android:layout_below="@+id/giornoricerca"
