--- a/GestioneOrario/app/src/main/res/layout/activity_data_ui.xml
+++ b/GestioneOrario/app/src/main/res/layout/activity_data_ui.xml
@@ -43,6 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="P0"
+
         android:id="@+id/radioButtonP1"
 
 
@@ -70,7 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="310dp"
         android:id="@+id/imageView2"
-        android:src="@drawable/g1"
+        android:src="@drawable/primo"
         android:adjustViewBounds="true"
         android:scaleType="matrix"
         android:layout_below="@+id/radioPiano"
